# CSCI-6040-final-project

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
Final Project Presentation/: final project.txt  final_presentation.html  final_presentation.pptx  final_presentation_script.md  narrative_plan.md  presentation_qa.md  presentation_script.md  presenter_run_of_show.md  proposal_presentation.html
data/advbench/: README.md  sample_prompts.csv
data/author_fitd/: README.md  harmbench.csv  prompt_harmbench.json  prompt_jailbreakbench.json
docs/: experiment_results_2026-04-11.md  experiment_results_2026-04-18_author_prompt_mode.md  final_report.docx  final_report.html  final_report.md  gpu_handoff_runbook.md  manual_audit.csv  milestones.md  partner_gpu_handoff_brief.md  plan_p0_p1.md  report_style.css  submission_checklist.md
scripts/: build_final_presentation_pptx.mjs  build_submission_figures.py  install.bat  install.ps1  install.py  install.sh  run_author_prompt_mode.sh  run_dashboard.sh  run_in_external_venv.sh  run_phase1_api_baseline.sh  run_phase2_local_llama3.sh  run_phase2_local_llama3_ollama.sh  run_phase2_vllm_llama3.sh  run_qwen_gpu_author_matrix.sh  run_vllm_model_matrix.sh  vllm_switch_model.sh
src/fitd_repro/: __init__.py  assistant.py  attacks.py  cli.py  dashboard.py  dashboard_server.py  dataset.py  evaluation.py  judge.py  models.py  rescore.py  (+2 more)
tests/: conftest.py  test_assistant.py  test_attacks.py  test_dashboard_server.py  test_evaluation.py  test_judge.py  test_models.py  test_runner.py
(+3 files in other folders)
